--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
   },
   "IdentityServer": {
     "Clients": {
-      "WebApplication1": {
+      "Petthy": {
         "Profile": "IdentityServerSPA"
       }
     }
