--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "temp_react_core",
+  "name": "petthy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
+    "moment": "^2.29.1",
     "oidc-client": "^1.9.0",
-    "react": "^16.0.0",
+    "react": "^16.14.0",
+    "react-datepicker": "^3.3.0",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.0.0",
+    "react-i18next": "^11.8.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-widgets": "^5.0.0-beta.22",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
-    "nan": "^2.14.1"
+    "nan": "^2.14.1",
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
