--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "dateformat": "^4.4.0",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.21",
@@ -16,6 +17,7 @@
     "react-datetime": "^3.0.4",
     "react-dom": "^16.0.0",
     "react-i18next": "^11.8.4",
+    "react-intl": "^5.10.9",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
