--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "^3.4.1",
     "react-widgets": "^5.0.0-beta.22",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "scheduler": "0.14.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
